@@ -43,12 +43,13 @@ NOTE: sorry, this is very raw :)
 * Test Actions with Unit tests
 
 * score print :
-    * Allow printing on different paper sizes (A4, etc...)
     * red images
       - 1/32 silences need a proper image
       - when a track first appears, we need its clef, key, etc. (maybe even once a page). Right now it's only
         given if the said track starts playing at measure 1  (or in the first line)
     - X notes not printed right
+    * Page setup options do not all stick on wxMac 2.8. Updating to 2.9 or patching will be necessary to
+      retain the same options as previously when invoking the page setup dialog more than once.
     ? allow setting font size, number of lines per page, zoom, etc...
     * long-term : in multi-track printing, some tracks need to be visually more tightly bound toghether (like tab and its score)
  - show silences in tabs too
